--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,24 +1,39 @@
-name: Generate Snake Game
+# This is a basic workflow to help you get started with Actions
 
+name: Generate snake animation
+
+# Controls when the action will run. 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Runs at midnight every day
+  schedule: # execute every 12 hours
+    - cron: '0 */12 * * *'
   workflow_dispatch:
+  push:
+    branches:
+      - main # Change this to your default branch if it's not 'main'
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  generate:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    - name: Generate Snake Game
-      uses: Platane/snk@master
-      with:
-        github_user_name: kiranj26
-        svg_out_path: dist/github-contribution-grid-snake.svg
-    - name: Deploy
-      uses: crazy-max/ghaction-github-pages@v2
-      with:
-        target_branch: output
-        build_dir: dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      
+      # Runs a single command using the runners shell
+      - name: Generate snake.svg
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
+
+      # Pushes the generated SVG to the output branch
+      - name: Push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
