--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -27,7 +27,7 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+          outputs: dist/snake.svg?palette=light # or custom colors
 
       # Pushes the generated SVG to the output branch
       - name: Push snake.svg to the output branch
